adding some to changes slide

--- a/docs/final_presentation/pres.tex
+++ b/docs/final_presentation/pres.tex
@@ -140,6 +140,14 @@
 \begin{frame}{Changes}
 	\begin{itemize}
 
+		\item Leaderboards and testing/deploying on multiple platforms were moved to
+					be stretch goals if time permitted
+
+		\item Cordova was chosen to make deploying to multiple platforms later on
+					easier
+
+		\item 
+
 		\item \todo{add some part that changed because of time constraints or because of Cordova}
 
 	\end{itemize}
