updating researcher interface and few more slide comments

--- a/docs/final_presentation/pres.tex
+++ b/docs/final_presentation/pres.tex
@@ -104,7 +104,9 @@
 \begin{frame}{Lessons Learned}
 	\begin{itemize}
 
-		\item Learning Cordova and app development from zero knowledge
+		\item Learning Cordova and app development without previous experience
+
+                \item Developing web application with Go and PostgreSQL/PostGIS with limited experience
 
 		\item Integrating with the Facebook API
 
@@ -127,7 +129,7 @@
 		\item QuickPic came from need to verify image categories (but was going to
 					be a part of the PhotoHunter app at first)
 
-		\item \todo{API came from need to interface with both apps and the web backend?}
+		\item API came from need to interface with both apps and the web backend
 
 		\item \todo{add more here}
 
@@ -146,7 +148,9 @@
 		\item Cordova was chosen to make deploying to multiple platforms later on
 					easier
 
-		\item 
+		\item Interfacing with PostgreSQL and Go created unexpected issues with the database
+
+                \item The researcher interface and API were merged into one package
 
 		\item \todo{add some part that changed because of time constraints or because of Cordova}
 
