adding new quickpic fig

--- a/docs/final_presentation/pres.tex
+++ b/docs/final_presentation/pres.tex
@@ -76,13 +76,17 @@
 
 \begin{frame}{QuickPic}
   \begin{columns}[c]
-    \begin{column}{0.5\columnwidth}
+    \begin{column}{0.3\columnwidth}
       \centering
       \includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{ss_quickpic_image}
     \end{column}
-    \begin{column}{0.5\columnwidth}
+    \begin{column}{0.3\columnwidth}
       \centering
       \includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{ss_quickpic_options}
+    \end{column}
+    \begin{column}{0.3\columnwidth}
+      \centering
+      \includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{ss_quickpic_stats}
     \end{column}
   \end{columns}
 \end{frame}
