Changed aspect ratio of presentation

--- a/docs/final_presentation/pres.tex
+++ b/docs/final_presentation/pres.tex
@@ -1,4 +1,4 @@
-\documentclass[aspectratio=169]{beamer}
+\documentclass{beamer}
 
 % beamer config
 \usetheme{Berkeley}
@@ -157,7 +157,7 @@
 
 \begin{frame}{The Future!}
 	\begin{itemize}
-		
+
 		\item Leaderboard Integration
 
 		\item Deploy to other platforms
