more setting up the document

--- a/docs/final_report/report.tex
+++ b/docs/final_report/report.tex
@@ -11,7 +11,8 @@
   Dataset Creation
   \footnote{Project location:
     \url{https://github.com/QuesoTech/PhotoHunter}
-  }
+  } \\
+  \textit{CS 499 - Senior Design, University of Kentucky}
 }
 
 \author{Connor Greenwell \and Ryan Baltenberger
@@ -21,6 +22,65 @@
 \begin{document}
 \maketitle
 
+\begin{abstract}
+  The PhotoHunter project is a system intended to simplify the creation of
+  datasets for computer vision research by the process of "gamification". The
+  system is composed of two mobile applications and a web interface. The web
+  interface allows researchers to specify a set of images based on their needs.
+  Based on these specifications, the first mobile application generates a list of
+  descriptions for photos. Users then capture photos matching these descriptions
+  and submit them in a scavenger-hunt style game. The second mobile application
+  uses the submitted photos to quiz users. The players are briefly shown the
+  images and then asked to label them. Based on the most-commonly provided
+  answer, the correct label for the image can be determined. The labelled images
+  are then provided to the researchers that requested the dataset. The system
+  provides entertainment for users and useful datasets for researchers.
+\end{abstract}
 
+\section{Disclaimer}
+This project has been designed and implemented as a part of the requirements
+for CS-499 Senior Design Project for Spring 2014 semester.  While the authors
+make every effort to deliver a high quality product, we do not guarantee that
+our products are free from defects.  Our software is provided "as is," and you
+use the software at your own risk.
+
+We make no warranties as to performance, merchantability, fitness for a
+particular purpose, or any other warranties whether expressed or implied.
+
+No oral or written communication from or information provided by the authors or
+the University of Kentucky shall create a warranty.
+
+Under no circumstances shall the authors or the University of Kentucky be
+liable for direct, indirect, special, incidental, or consequential damages
+resulting from the use, misuse, or inability to use this software, even if the
+authors or the University of Kentucky have been advised of the possibility of
+such damages.
+
+\section{Product Specifications}
+Specs for the project go here.
+
+\section{Product Planning}
+Planning on the project goes here.
+
+\section{Schedule and Milestones}
+Some stuff about our schedule goes here.
+
+\section{Platforms, Tools, and Languages}
+Stuff about what we used goes here.
+
+\section{Design}
+Port over some stuff about the design
+
+\section{Implementation}
+Talk about how we implemented everything.
+
+\section{Future Enhancements/Maintenance}
+How to make it better.
+
+\section{Conclusions}
+Wrap it up.
+
+\section{References}
+Cite everything we used.
 
 \end{document}
