Changed quickpic images in presentation.

--- a/docs/final_presentation/pres.tex
+++ b/docs/final_presentation/pres.tex
@@ -18,7 +18,7 @@
   Application for Large Dataset Creation}
 
 \author[]{Connor Greenwell \and Ryan Baltenberger
-  \and J.\ David Smith \and Aaron Bradshaw}
+  \and J David Smith \and Aaron Bradshaw}
 
 \institute{QuesoTech.com}
 
