--- a/docs/final_report/report.tex
+++ b/docs/final_report/report.tex
@@ -2,6 +2,15 @@
 
 \usepackage[scale=0.7]{geometry}
 \usepackage{hyperref, tablefootnote, color, graphicx, float}
+\usepackage{titlesec}
+
+\setcounter{secnumdepth}{4}
+
+\titleformat{\paragraph}
+{\normalfont\normalsize\bfseries}{\theparagraph}{1em}{}
+\titlespacing*{\paragraph}
+{0pt}{3.25ex plus 1ex minus .2ex}{1.5ex plus .2ex}
+
 \newcommand{\todo}[1]{\textcolor{red}{\textbf{[#1]}}}
 
 \title{PhotoHunter: A Citizen-Scientist Game with User-in-the-loop
@@ -57,7 +66,219 @@ authors or the University of Kentucky have been advised of the possibility of
 such damages.
 
 \section{Product Specifications}
-Specs for the project go here.
+
+\subsection{Environment}
+
+\subsubsection{Web Browsers}
+The web interface for the PhotoHunter Project will be compatible with the
+versions of Google Chrome and Mozilla Firefox that are available on
+April 1, 2015. This interface will also employ a
+responsive design to accommodate users visiting on a mobile device's browser.
+
+\subsubsection{Mobile Application}
+The two mobile applications for the PhotoHunter Project will be developed with
+cross-platform tool, allowing the applications to be deployed to Android
+version 4.4.2 (Kit-Kat) and, if time permits, iOS version 8.
+
+\subsection{Architecture}
+
+\subsubsection{Overview}
+The components of the PhotoHunter Project will each utilize the same database
+for different purposes.
+
+\subsubsection{Web Interface}
+The web interface will allow researchers to specify an image dataset based on
+their needs. This specification is then used as a topic for the PhotoHunter
+mobile application. Researchers may also use the web interface retrieve their
+finalized dataset after the images have been labelled by the Quick Pic mobile
+application. 
+
+\subsubsection{PhotoHunter}
+This mobile application generates lists based on the topics provided by
+researchers through the web interface. Users playing the PhotoHunter game
+capture photos matching the topics in the list. These photos are uploaded to
+the overall system's database for use in dataset generation.
+
+\subsubsection{Quick Pic}
+This mobile application uses the photos and topics provided by the PhotoHunter
+application and web interface to quiz users. Users are briefly shown one of the
+photos. Afterwards, the users are asked to label the photo based on a set of
+choices. The answer provided by the user is sent to the central system. 
+
+\subsubsection{Backend}
+The backend of the system will generate lists for the PhotoHunter application.
+The backend will also analyze the data provided by Quick Pic to predict the
+correctness of user-provided labels. Finally, the backend will compile and
+generate datasets for researchers to download.
+
+\subsection{Features}
+
+\subsubsection{Web Interface}
+The web interface will provide researchers with tools for dataset
+specification, tracking, and retrieval. 
+
+  \paragraph{Researcher Accounts}
+  The web interface will allow researchers to create accounts to login. An
+  account will be necessary to use the other features of the web interface.
+  
+  \paragraph{Dataset Requests}
+  When logged in to the system, users can create a new request for a dataset.
+  This request will be a description of the data needed and the desired size of
+  the dataset.
+  
+  \paragraph{Dataset Status}
+  The system will allow users to view the current status of their dataset based
+  on the current size. This status will provide information regarding recent
+  activity in the dataset and time since the dataset was initialized. 
+  
+  \paragraph{Dataset Download}
+  The system will allow users to download their dataset after it is complete.
+  Additionally, the system will allow users to download incomplete datasets. 
+  
+  
+\subsubsection{PhotoHunter Application}
+The PhotoHunter mobile application provides a scavenger-hunt experience where
+users are given lists of photo descriptions. Users then capture and submit
+photos matching these descriptions. Based on the number and quality of
+submissions, users are ranked against one another, introducing a competitive
+element to the process.
+
+  \paragraph{User Accounts}
+  The application will allow users to create profiles to login. An account will
+  be necessary for the user to submit photos.
+  
+  \paragraph{Statistics}
+  The application will allow users to track their statistics when logged in.
+  
+  \paragraph{Hunt Lists}
+  The application will provide lists of topics to the user.
+  
+  \paragraph{Photo Submission}
+  The application will allow users to take photos with their on-device camera.
+  These photos can then be submitted to one of the options on the user's current
+  list of topics.
+  
+  \paragraph{Leaderboards}
+  The application will allow users to view their current ranking against all
+  other users. This ranking will be determined by the number of submissions a
+  user has made.
+  
+\subsubsection{Quick Pic}
+The Quick Pic mobile application is quiz game where users quickly identify
+images based on a provided set of labels. Users are briefly shown an image.
+Then users must select the most correct label from a set of choices. Based on
+their correctness and speed, users are given points and ranked against one
+another.
+
+  \paragraph{User Accounts}
+  The application requires users to create profiles. 
+  
+  \paragraph{Statistics}
+  The application will allow users to view quiz statistics, such as percentage
+  correct, average response time, and total points.
+  
+  \paragraph{Image Flash}
+  The application will briefly show the user an image pulled from the
+  PhotoHunter Project's database.
+  
+  \paragraph{Labels}
+  After showing a user an image, the application will provide the user with a
+  list of labels. These labels will have varying degrees of relevancy. One label
+  will be determined by the topic in which the photo was submitted as in the
+  PhotoHunter application. 
+  
+  \paragraph{Leaderboards}
+  The application will allow users to view their ranking against all other
+  users based on their cumulative points.
+  
+\subsubsection{Backend}
+The backend of the PhotoHunter Project will manage the data between the different
+applications. The backend will use the data to generate databases for researchers
+using the PhotoHunter system from the web.
+
+        \paragraph{Database Management}
+        The backend will take dataset requests from the web interface and update the
+        image database accordingly.
+
+        \paragraph{Photo Retrieval}
+        The backend will receive images and metadata from the PhotoHunter application 
+        and store them in a database.
+
+        \paragraph{Photo Posting}
+        The backend will provide images to the Quick Pic application from the database.
+
+        \paragraph{Photo Selection}
+        The backend will choose photos to provide to Quick Pic based on the current 
+        information available for the photos, ensuring that sufficient data is collected
+        for each image.
+
+        \paragraph{Photo Processing}
+        Based on the answers provided in the Quick Pic application, the backend will 
+        predict the correct label of the images in the database.
+
+        \paragraph{Dataset Creation}
+        The backend will monitor the states of the dataset requests and the database 
+        and create the datasets once the requirements have been met. 
+
+
+\subsection{Interfaces}
+The PhotoHunter Project will have three central interfaces: two mobile
+applications and a web interface.
+
+\subsubsection{Web Interface}
+The web interface component will have a login menu. Once logged in the, user
+will be presented with a control panel. This control panel will contain various
+options including:
+
+\begin{enumerate}
+
+  \item \textbf{Dataset Request:} A form for requesting a new dataset.
+  
+  \item \textbf{Dataset Status:} An information panel for viewing statistics
+        about any datasets in development.
+  
+  \item \textbf{Dataset Download:} A tool allowing users the download any
+        complete or partially complete datasets.
+
+\end{enumerate}
+  
+\subsubsection{PhotoHunter}
+The PhotoHunter mobile application will have a main login screen upon start.
+After logging in, three main menu options are available, including:
+
+\begin{enumerate}
+
+  \item \textbf{Photo Hunt:} Provides the user with a list of topics. On this
+        view, the user may also choose to take a photo. After taking a photo, the user
+        may choose a relevant category under which to submit the photo.
+
+  \item \textbf{Statistics:} Allows the user to view personal statistics.
+
+  \item \textbf{Leaderboard:} Allows the user to view global leaderboards.
+
+\end{enumerate}
+  
+\subsubsection{Quick Pic}
+The Quick Pic mobile application will have a main login screen upon start. The
+following main menu will have the following options:
+
+\begin{enumerate}
+
+  \item \textbf {Photo Quiz:} Quizzes the user by showing them photos and
+        asking for the correct label.
+
+  \item \textbf{Statistics:} Allows the user to view personal statistics.
+
+  \item \textbf{Leaderboard:} Allows the user to view global leaderboards.
+
+\end{enumerate}
+   
+\subsection{Installation}
+The web interface component of the PhotoHunter Project will require no
+installation. The user will login to the site using any standard internet
+browser. The mobile applications will need to be downloaded from the Google
+Play App Store or the iTunes App Store, depending on the user's device.
+
 
 \section{Product Planning}
 Planning on the project goes here.
