adding intro header

--- a/docs/final_report/report.tex
+++ b/docs/final_report/report.tex
@@ -46,6 +46,9 @@
   provides entertainment for users and useful datasets for researchers.
 \end{abstract}
 
+
+
+
 \section{Disclaimer}
 This project has been designed and implemented as a part of the requirements
 for CS-499 Senior Design Project for Spring 2014 semester.  While the authors
@@ -64,6 +67,10 @@ liable for direct, indirect, special, incidental, or consequential damages
 resulting from the use, misuse, or inability to use this software, even if the
 authors or the University of Kentucky have been advised of the possibility of
 such damages.
+
+
+\section{Introduction}
+
 
 \section{Product Specifications}
 
